<resources>
    <string name="app_name">Gym Manager</string>
    <string name="add_members_description">Add New Member</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="members">Members</string>
    <string name="records">Fee Records</string>
    <string name="more">More</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="click_photo">Click photo of this member</string>
    <string name="name">NAME</string>
    <string name="phone">PHONE</string>
    <string name="address">ADDRESS</string>
    <string name="failed_adding_member">couldn\'t add member please try again </string>
    <string name="months">MONTHS</string>
    <string name="AMOUNT">AMOUNT</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_fees">Sort By Fees</string>
    <string name="sort_by_date">Sort By Date</string>
</resources>