<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="withText|always"
        />
    <item android:id="@+id/sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="withText|always">
        <menu>
            <group>
                <item android:id="@+id/sort_by_name"
                    android:title="@string/sort_by_name"/>
                <item android:id="@+id/sort_by_fees"
                    android:title="@string/sort_by_fees"/>
            </group>
        </menu>
    </item>

</menu>