<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.gymmanager.viewmodel.AddNewMemberFragmentViewModel" />
        <variable
            name="fragment"
            type="com.example.gymmanager.view.AddMemberFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".view.AddMemberFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/image"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_max="270dp"
            app:layout_constraintHeight_max="270dp"
            android:elevation="15dp"
            imageUri="@{viewModel.imageUri}"
            app:layout_constraintBottom_toTopOf="@id/img_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/clickImageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_max="60dp"
            app:layout_constraintHeight_max="60dp"
            android:elevation="16dp"
            android:onClick="@{v -> fragment.launchCamera()}"
            android:background="@drawable/camera_button_icon"
            android:src="@drawable/ic_baseline_photo_camera_24"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/image"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="1"/>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/img_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <com.example.gymmanager.view.BorderedCardView
            android:id="@+id/name_cardview"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="12dp"
            app:borderColor="@color/cardView_border_red"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/phone_cardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_guideline">
            <com.example.gymmanager.view.validation_notifier_edittext.ValidationNotifierEditText
                android:id="@+id/name"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:text="@={viewModel.newMember.name}"
                app:validatorRegex="[a-zA-Z]+"
                app:validationErrorMessage="invalid input" />
        </com.example.gymmanager.view.BorderedCardView>

       <com.example.gymmanager.view.BorderedCardView
           android:id="@+id/phone_cardview"
           android:layout_width="0dp"
           android:layout_height="50dp"
           android:layout_marginStart="2dp"
           android:layout_marginEnd="2dp"
           app:cardCornerRadius="25dp"
           app:cardElevation="12dp"
           app:borderColor="@color/cardView_border_red"
           app:cardBackgroundColor="@color/white"
           app:layout_constraintTop_toBottomOf="@id/name_cardview"
           app:layout_constraintBottom_toTopOf="@id/address_cardview"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent">
           <com.example.gymmanager.view.validation_notifier_edittext.ValidationNotifierEditText
               android:id="@+id/phone"
               android:layout_marginStart="5dp"
               android:layout_height="50dp"
               android:layout_width="match_parent"
               android:hint="@string/phone"
               android:textColor="@color/black"
               android:textColorHint="@android:color/darker_gray"
               android:text="@={viewModel.newMemberDetails.phone}"
               app:layout_constraintTop_toBottomOf="@id/name"
               app:validatorRegex="[7-9][0-9]{9}" />
       </com.example.gymmanager.view.BorderedCardView>


        <com.example.gymmanager.view.BorderedCardView
            android:id="@+id/address_cardview"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:cardElevation="12dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="25dp"
            app:borderColor="@color/cardView_border_green"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_cardview">

        <com.example.gymmanager.view.validation_notifier_edittext.ValidationNotifierEditText
            android:id="@+id/address"
            android:text="@={viewModel.newMemberDetails.address}"
            android:hint="@string/address"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            />
        </com.example.gymmanager.view.BorderedCardView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

<com.github.jorgecastilloprz.FABProgressCircle
    android:id="@+id/fab_progress_circle"
    android:layout_width="80dp"
    android:layout_height="80dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/guideline"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="30dp">

        <com.example.gymmanager.view.enabled_disabled_behaviour_accepter_floating_action_button.EnabledDisabledBehaviourFloatingActionButton
            android:id="@+id/add_member_FAB"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/add_members_description"
            />

</com.github.jorgecastilloprz.FABProgressCircle>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>